name: liquid-post
version: 0
cabal-version: >=1.10
build-type: Custom

flag liquidhaskell
 description: After building, verify with LiquidHaskell
 default:     True

library
 x-liquidhaskell-options: --quiet --totalhaskell
 hs-source-dirs: examples
 other-modules:
   FromJust
   Numbers
   Impossible
   DivByZero
   CheckThatData
 build-depends: liquidhaskell-cabal >= 0.1.1, base > 4 && < 5
 default-language: Haskell2010
